# materiel

./: CMakeLists.txt  readme.md
src/: compute.h  main.cpp
